fix: expand/collapse of accordion on click and css fixes.

--- a/src/app/shared/styles/mixin.scss
+++ b/src/app/shared/styles/mixin.scss
@@ -103,7 +103,7 @@
 }
 
 .mq-col-xs-12 {
-    width: 100%;
+    width: 98%;
 }
 
 .mq-col-xs-11 {
@@ -218,11 +218,11 @@
 }
 
 .text-success {
-    color: var(--mq-color-green70);
+    color: var(--mq-color-green110);
 }
 
 .text-error {
-    color: var(--mq-color-red70);
+    color: var(--mq-color-red110);
 }
 
 .text-primary {
@@ -230,11 +230,11 @@
 }
 
 .text-secondary {
-    color: var(--mq-color-grey70);
+    color: var(--mq-color-grey90);
 }
 
 .text-warning {
-    color: var(--mq-color-orange70);
+    color: var(--mq-color-orange110);
 }
 
 $mq-table-row-height: 48px;
@@ -257,10 +257,14 @@ $mq-table-row-height: 48px;
     &__header-cell {
         font-family: sans-serif;
         font-weight: 500;
+        padding: var(--mq-space-base) var(--mq-space-small);
+        min-height: $mq-table-row-height;
+        text-align: left;
     }
 
-    &__header-cell,
     &__body-cell {
+        font-family: sans-serif;
+        font-weight: 200;
         padding: var(--mq-space-base) var(--mq-space-small);
         min-height: $mq-table-row-height;
         text-align: left;
